# airguard

./: .env.example  .gitignore  README.md  pyproject.toml
airguard/: config.py  main.py
airguard/bot/: handlers.py
airguard/db/: models.py  repository.py
airguard/eval/: asserts.py  benchmark.py  e2e.py  llm_judge.py  tool_checker.py
airguard/graph/: builder.py  edges.py  nodes.py  state.py
airguard/rag/: builder.py  retriever.py
airguard/rag/documents/: allergy_seasons.txt  anomaly_patterns.txt  asthma_recommendations.txt  who_guidelines.txt
airguard/tools/: aqi_tool.py  calculator_tool.py  pollen_uv_tool.py
