[project]
name = "airguard"
version = "0.1.0"
description = "Мультиагентный Telegram-бот мониторинга качества воздуха"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "python-telegram-bot>=21.0",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "langchain-community>=0.3",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
    "httpx>=0.27",
    "langfuse>=2.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
